--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Location#index</h1>
-<p>Find me in app/views/location/index.html.erb</p>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(:location, url: locations_path) do |f| %>
+
+        <%= f.label :city %>
+        <%= f.text_field :city, class: "form-control" %>
+
+        <%= f.label :country %>
+        <%= f.text_field :country, class: "form-control" %>
+
+        <%= f.submit "Search", class: "btn btn-primary" %>
+        <%= f.submit "I'm Feeling Lucky", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
