Render location resource in index view; add partial to index view of Location

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -13,3 +13,11 @@
     <% end %>
   </div>
 </div>
+
+<% unless @location.nil?   %>
+    <div class="search_result">
+      <div class="col-md-6 col-md-offset-3">
+        <%= render 'location' %>
+      </div>
+    </div>
+<% end %>
