--- a/app/assets/stylesheets/location.scss
+++ b/app/assets/stylesheets/location.scss
@@ -4,3 +4,22 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+/* forms */
+
+form {
+  margin: 15px 0;
+}
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  margin-bottom: 15px;
+  @include box-sizing(border-box)
+}
+
+input {
+  height: auto !important
+}
+
+
+
