--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -1,27 +1,16 @@
+<h3> Location and Weather result</h3>
+<ul class="search_history">
+  <% unless @location.nil? %>
+      <div class="history_record">
+        <li><strong>City:</strong> <%= "#{@location.city}" %></li>
+        <li><strong>Country:</strong> <%= "#{@location.country}" %></li>
+        <li><strong>Weather description:</strong> <%= "#{@location.description}" %></li>
+        <li><strong>Temperature:</strong> <%= "#{@location.temp}" %></li>
+        <li><strong>Humidity:</strong> <%= "#{@location.humidity}" %></li>
+        <li><strong>Wind speed:</strong> <%= "#{@location.wind_speed}" %></li>
+      </div>
+  <% end %>
+</ul>
 <p>
-    <strong>City:</strong>
-    <%= @location.city %>
-</p>
-<p>
-  <strong>Country:</strong>
-  <%= @location.country %>
-</p>
-<p>
-  <strong>Weather description:</strong>
-  <%= @location.description %>
-</p>
-<p>
-  <strong>Temperature:</strong>
-  <%= @location.temp %>
-</p>
-<p>
-  <strong>Humidity:</strong>
-  <%= @location.humidity %>
-</p>
-<p>
-  <strong>Wind speed:</strong>
-  <%= @location.wind_speed %>
-</p>
-<p>
-  <%= image_tag "http://maps.google.com/maps/api/staticmap?size=450x300&sensor=false&zoom=16&markers=#{@location.latitude}%2C#{@location.longitude}" %>
+  <%= image_tag "http://maps.google.com/maps/api/staticmap?size=450x300&sensor=false&zoom=16&markers=#{@location.latitude}%2C#{@location.longitude}", class: "maps" %>
 </p>
