--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,23 +1,28 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(:location, url: locations_path) do |f| %>
+    <div class="col-md-6 col-md-offset-3">
+        <%= form_for(:location, url: locations_path) do |f| %>
 
-        <%= f.label :city %>
-        <%= f.text_field :city, class: "form-control" %>
+            <%= f.label :city %>
+            <%= f.text_field :city, class: "form-control" %>
 
-        <%= f.label :country %>
-        <%= f.text_field :country, class: "form-control" %>
+            <%= f.label :country %>
+            <%= f.text_field :country, class: "form-control" %>
 
-        <%= f.submit "Search", class: "btn btn-primary" %>
-        <%= f.submit "I'm Feeling Lucky", class: "btn btn-primary" %>
-    <% end %>
-  </div>
+            <%= f.submit "Search", class: "btn btn-primary" %>
+            <%= f.submit "I'm Feeling Lucky", class: "btn btn-primary" %>
+        <% end %>
+    </div>
 </div>
 
-<% unless @location.nil?   %>
-    <div class="search_result">
-      <div class="col-md-6 col-md-offset-3">
-        <%= render 'location' %>
-      </div>
+<% unless @location.nil? %>
+    <div class="col-md-5 col-md-offset-2">
+        <div class="search_result">
+            <%= render 'location' %>
+        </div>
     </div>
+    <aside class="col-md-3 cold-md-offset-2">
+      <section>
+        <%= render 'search_history' %>
+      </section>
+    </aside>
 <% end %>
