--- a/app/views/locations/_search_history.html.erb
+++ b/app/views/locations/_search_history.html.erb
@@ -5,7 +5,7 @@
           <div class="history_record">
             <li><%= "City: #{record.city}" %></li>
             <li><%= "Country: #{record.country}" %></li>
-            <li><%= "Temperature: #{record.temp}" %></li>
+            <li><%= "Temperature: #{record.temp} #{record.unit}" %></li>
           </div>
         <% end %>
     <% end %>
