--- a/app/assets/stylesheets/location.scss
+++ b/app/assets/stylesheets/location.scss
@@ -11,7 +11,7 @@ form {
   margin: 15px 0;
 }
 
-input, textarea, select, .uneditable-input {
+input, textarea, select, input {
   border: 1px solid #bbb;
   margin-bottom: 15px;
   @include box-sizing(border-box)
@@ -19,6 +19,13 @@ input, textarea, select, .uneditable-input {
 
 input {
   height: auto !important
+}
+
+/* Unit select box */
+
+.unit_selector {
+  margin-top: 15px;
+  @include box-sizing(border-box)
 }
 
 /* search history side bar */
